support ctrl+c to copy ListView's content & support drag a directory to file path field